Atomic Commit Failed when Gaming
Brief summary of the problem:
When playing games on KDE Wayland the game would freeze but not crashed.. so it like there is an interval of freezing and it works again.. and freeze again and so on.. I thought this was KWIN Wayland problem at first because GNOME Wayland works fine.. but one of the comment on my KDE BUG Report suggest me to report it as Driver bug instead.. However there is workaround for this and that is `KWIN_DRM_USE_MODIFIERS=0 KWIN_DRM_NO_DIRECT_SCANOUT=1' and my laptop is connected to external Monitor
Hardware description:
- CPU: Ryzen 7 5800H
- iGPU: Cezanne (Vega 8)
- dGPU : RX 6700M (idk why but.. when doing 'lspci -nn' it doesnt list it but neofetch list it)
- System Memory: 16GB
- Display(s): 2560x1080 75Hz
- Type of Display Connection: HDMI and DP (Both connected directly to the dGPU)
System information:
- Distro name and Version: Arch Linux
- Kernel version: 5.18.6-zen/ 5.18.6-tkg-cfs (I have 2 kernel installed just make sure this is not my kernel problem)
- Custom kernel: N/A
- AMD official driver version: N/A
How to reproduce the issue:
- Login to KDE Wayland
- Run steam
- Run any games (in this test i only test Apex and Control.. just to make sure DKVK and VKD3D not responsible for this)
- Just look at it
Log files (for system lockups / game freezes / crashes)
There is repeating messages of this
kwin_wayland[1335]: kwin_wayland_drm: Atomic commit failed! This should never happen! Invalid argument kwin_wayland[1335]: kwin_wayland_drm: Presentation failed! Invalid argument
in between those repeating messages there will be
kernel: [drm:dm_plane_helper_prepare_fb [amdgpu]] *ERROR* Failed to pin framebuffer with error -22 kernel: [drm:dm_plane_helper_prepare_fb [amdgpu]] *ERROR* Failed to pin framebuffer with error -22