backends/drm: disable direct scanout on secondary GPUs

This is done for two reasons:
- there are some significant driver bugs with direct scanout from other GPUs,
  like https://gitlab.freedesktop.org/drm/amd/-/issues/2075
- with implicit modifiers, direct scanout on secondary GPUs
  is also very unlikely to yield the correct results

Once we have more information from clients about which GPU a buffer is targeting
/ resides on, we can loosen that restriction again.

(cherry picked from commit b62feb9293cfaa7c92d2455259af1c83c015ff06)