src/backends/drm/drm_egl_layer.cpp
@@ -106,6 +106,16 @@ bool EglGbmLayer::doImportScanoutBuffer(GraphicsBuffer *buffer, const ColorDescr
         // the hardware to some buffer format we can't switch away from
         return false;
     }
+    if (m_pipeline->gpu() != m_pipeline->gpu()->platform()->primaryGpu()) {
+        // Disable direct scanout between GPUs, as
+        // - there are some significant driver bugs with direct scanout from other GPUs,
+        //   like https://gitlab.freedesktop.org/drm/amd/-/issues/2075
+        // - with implicit modifiers, direct scanout on secondary GPUs
+        //   is also very unlikely to yield the correct results.
+        // TODO once we know what buffer a GPU is meant for, loosen this check again
+        // Right now this just assumes all buffers are on the primary GPU
+        return false;
+    }
     if (m_pipeline->output()->colorProfileSource() == Output::ColorProfileSource::ICC && !m_pipeline->output()->highDynamicRange() && m_pipeline->iccProfile()) {
         // TODO make the icc profile output a color pipeline too?
         return false;
@@ -128,10 +138,6 @@ bool EglGbmLayer::doImportScanoutBuffer(GraphicsBuffer *buffer, const ColorDescr
     }
     const auto plane = m_type == DrmPlane::TypeIndex::Primary ? m_pipeline->crtc()->primaryPlane() : m_pipeline->crtc()->cursorPlane();
     if (offloadTransform() != OutputTransform::Kind::Normal && (!plane || !plane->supportsTransformation(offloadTransform()))) {
-        return false;
-    }
-    // importing a buffer from another GPU without an explicit modifier can mess up the buffer format
-    if (buffer->dmabufAttributes()->modifier == DRM_FORMAT_MOD_INVALID && m_pipeline->gpu()->platform()->gpuCount() > 1) {
         return false;
     }
     m_scanoutBuffer = m_pipeline->gpu()->importBuffer(buffer, FileDescriptor{});
